<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/oncl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/cantidad_Add"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/arial"
        android:gravity="center"
        android:hint="@string/cantidad_Add"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_Nombre"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad_Add" />

    <EditText
        android:id="@+id/txt_Nombre"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/arial"
        android:hint="@string/txt_Nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_Description"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_Description"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre" />

    <EditText
        android:id="@+id/txt_Description"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/arial"
        android:hint="@string/txt_Description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Description"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_Facturacion"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_Facturacion"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Description" />

    <TextView
        android:id="@+id/lbl_Periodo"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_Facturacion_Perdiodo"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Facturacion" />

    <EditText
        android:id="@+id/txt_dias"
        android:layout_width="57dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/arial"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/txt_dias"
        android:textColor="@color/primary_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/lbl_Periodo"
        app:layout_constraintTop_toBottomOf="@+id/txt_Description"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/spinner_periodo"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/primary_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toEndOf="@+id/txt_dias"
        app:layout_constraintTop_toBottomOf="@+id/txt_Description"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/lbl_primer_Pago"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_primer_Pago"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_periodo" />

    <EditText
        android:id="@+id/txt_primer_Pago"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_input"
        android:clickable="true"
        android:focusable="false"
        android:fontFamily="@font/arial"
        android:hint="@string/txt_primerPago"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_primer_Pago"
        tools:ignore="KeyboardInaccessibleWidget,RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_color"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_Color"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/txt_primer_Pago" />

    <EditText
        android:id="@+id/txt_choose_color"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/arial"
        android:hint="@string/txt_Color"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"

        android:paddingLeft="5dp"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_color"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_tipo_pago"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/lbl_tipo_Pago"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_color" />

    <EditText
        android:id="@+id/txt_tipo_pago"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/arial"
        android:hint="@string/txt_tipo_Pago"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_tipo_pago"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_save"
        android:fontFamily="@font/arial"
        android:onClick="onCLick"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        app:backgroundTint="?attr/colorControlHighlight"
        app:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipo_pago"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>